# splinenorm

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
.github/workflows/: docs.yml
docs/: Fit_Continuum.ipynb  Fit_Fringing.ipynb  Getting_Started.ipynb  Makefile  api.rst  citation.rst  conf.py  examples.rst  high_contrast_specroscopy_speckles.py  index.rst
docs/_static/: custom.css
docs/_templates/: layout.html
docs/data/: HD19467B_spectrum_bestfit_model.txt  lte02500-5.00-0.0.PHOENIX-NewEra-ACES-COND-2023.HSR_SPIROU-ORDER46.txt  lte02500-5.00-0.0.PHOENIX-NewEra-ACES-COND-2023.HSR_SPIROU.txt  lte05500-4.50-0.0.PHOENIX-NewEra-ACES-COND-2023.HSR.txt  lte05500-4.50-0.0.PHOENIX-NewEra-ACES-COND-2023.HSR_NRS1.txt  lte05500-4.50-0.0.PHOENIX-NewEra-ACES-COND-2023.HSR_NRS2.txt  mdwarf_order42_epoch59065.txt  mdwarf_order45_epoch59065.txt  mdwarf_order46_epoch59065.txt  mdwarf_order47_epoch59065.txt
docs/examples/: fit_continuum.ipynb  fit_fringing.ipynb  getting_started.ipynb  index.rst
docs/notebooks/: index.rst
src/splinenorm/: __init__.py  functions.py  spline_model.py
tests/: test_import.py
