[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "splinenorm"
version = "0.1.0"
description = "Scientific astronomy tools for spline normalization"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Dario Gonzalez Picos" }]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "astropy>=5.3",
]

[project.urls]
Homepage = "https://dgonzalezpicos.github.io/splinenorm/"
Repository = "https://github.com/DGonzalezPicos/splinenorm"
Documentation = "https://dgonzalezpicos.github.io/splinenorm/"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "sphinx>=7.0",
]
docs = [
    "sphinx>=7.0",
    "pydata-sphinx-theme>=0.15",
    "myst-nb>=1.0",
    "sphinx-design>=0.5",
    "ipython>=8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/splinenorm"]

[tool.hatch.build.targets.sdist]
include = ["src/splinenorm", "tests", "docs"]

[tool.pytest.ini_options]
testpaths = ["tests"]
